--- a/Tomer.html
+++ b/Tomer.html
@@ -14,7 +14,7 @@ which gave me a whole new perspective on music.<br>That moment chane my future l
 <li><a href="https://en.wikipedia.org/wiki/Berlin" target="_blank">Berlin</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki</a></li>
 
-<br>In 2003 I had my first band  <b><a href="https://www.facebook.com/loudnclear.official">LOUD n´CLEAR</b></a> <p><img style="width:200px;" src="concert2.jpg"/> <p id="coolstyle">it was a hard rock band influenced by the 80´s glam metal.
+<br>In 2003 I had my first band  <b><a href="https://www.facebook.com/loudnclear.official">LOUD n´CLEAR</b></a> <p><img style="width:200px;" src="Images/concert2.jpg"/> <p id="coolstyle">it was a hard rock band influenced by the 80´s glam metal.
 <br>With luck and a lot of hard work we managed to play in big metal festivals, win number 1 in a bands contest 
 <br>and open for<u><i> Paul Dianno</u></i> - <b><a href="https://www.ironmaiden.com/" target="_blank">Iron Maiden singer</b></a> and <u><i>Ron Bambelfoot</u></i> who played guitar with <b><a href="https://www.gunsnroses.com/" target="_blank">Guns n´Roses</b></a> at that time.
 <br>The band decided to go on separate ways in 2005 but came back to record the album in 2012 which called "<b><a href="htconcert2.jpgtps://open.spotify.com/album/56wdbUe1Cl5Dy5hADFcYO7" target="_blank">Playing with Thunder</b></a> and went on a few gigs.
