--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 
 <h1><b> <span style="color:blue">My Rock n´Roll Journey</b></h1></span>
 I was born in Israel and raised in the city Haifa, I didn´t listen to rock music until I found the band <a href="https://en.wikipedia.org/wiki/Queen_(band)" target="_blank">Queen</a>
-
-which gave me a whole new perspective on music.<br>That moment chane my future later on when i was traveling to find the best place where I could sattle down in order so I can make music.
+<p>which gave me a whole new perspective on music.<br>That moment chane my future later on when i was traveling to find the best place where I could sattle down in order so I can make music.
 <h2 id="specialStyle"> some of the places I traveled: </h2> 
 <li><a href="https://en.wikipedia.org/wiki/London" target="_blank">London</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Berlin" target="_blank">Berlin</a></li>
