--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 I was born in Israel and raised in the city Haifa, I didn´t listen to rock music until I found the band <a href="https://en.wikipedia.org/wiki/Queen_(band)" target="_blank">Queen</a>
 <br>which gave me a whole new perspective on music, especially when it comes to compositions, melodies and production.<br>That moment chane my future later on when i was traveling to find the best place where I could sattle down in order so I can make music.
 <h2 id="specialStyle"> some of the places I traveled: </h2> 
+<br>It took me a while to find the right place so I can feel comfortable enough to make my music, therefor I traveled several countries and were concidering those places as well :
 <li><a href="https://en.wikipedia.org/wiki/London" target="_blank">London</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Berlin" target="_blank">Berlin</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki</a></li>
