--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ It took me a while to find the right place so I can feel comfortable enough to m
 <li><a href="https://en.wikipedia.org/wiki/Berlin" target="_blank">Berlin</a></li>
 <li><a href="https://en.wikipedia.org/wiki/Helsinki" target="_blank">Helsinki</a></li>
 
-<br>In 2003 I had my first band  <b><a href="https://www.facebook.com/loudnclear.official">LOUD n´CLEAR</b></a> <p>img style="width:200px;" src="images/concert2.jpg" /></p>
+<br>In 2003 I had my first band  <b><a href="https://www.facebook.com/loudnclear.official">LOUD n´CLEAR</b></a> 
+<p> img style="width:200px;" src="..images/concert2.jpg" /></p>
 <p id="coolstyle">it was a hard rock band influenced by the 80´s glam metal.
 <br>With luck and a lot of hard work we managed to play in big metal festivals, win number 1 in a bands contest and 
 <br>opened for<u><i> Paul Dianno</u></i> - <b><a href="https://www.ironmaiden.com/" target="_blank">Iron Maiden singer</b></a> and <u><i>Ron Bambelfoot</u></i> who played guitar with <b><a href="https://www.gunsnroses.com/" target="_blank">Guns n´Roses</b></a> at that time.
