--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1><b> <span style="color:blue">My Rock n´Roll Journey</b></h1></span>
-I was born in Israel and raised in the city Haifa, I didn´t listen to rock music until I found the band <a href="https://en.wikipedia.org/wiki/Queen_(band)" target="_blank">Queen</a>
+My name is Tomer Darmon, I was born in Israel and raised in the city Haifa, I didn´t listen to rock music until I found the band <a href="https://en.wikipedia.org/wiki/Queen_(band)" target="_blank">Queen</a>
 <br>which gave me a whole new perspective on music, especially when it comes to compositions, melodies and production.<br>That moment chane my future later on when i was traveling to find the best place where I could sattle down in order so I can make music.
 <h2 id="specialStyle"> some of the places I traveled: </h2> 
 It took me a while to find the right place so I can feel comfortable enough to make my music,<br> therefore I traveled several countries and were concidering those places as well :
