--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h2><b><i>Introduction - My Rock n' Roll Journey</b></h2></i>
     <div class="container">
         <div class="image">
-            <img src="images/intro.jpg" alt="Tomer Darmon">
+            <img src="images/intro.jpg" alt="intro">
         </div>
         <div class="content">
             <p>
