--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ With luck and a lot of hard work we managed to play in big metal festivals, win 
 <br>and open for<u><i> Paul Dianno</u></i> - <b><a href="https://www.ironmaiden.com/" target="_blank">
 Iron Maiden singer</b></a> and <u><i>Ron Bambelfoot</u></i> who played guitar with <b><a href="https://www.gunsnroses.com/" target="_blank">
 Guns n´Roses</b></a> at that time.
-<p> <img style="width:200px;" src="images/concert2.jpg" alt="Concert Image"/>
-</p>
+<p><img style="width:200 px;" src="concert2.jpg"/> <p id="coolstyle">
 The band decided to go on separate ways in 2005 but after demands by addicted fans that wanted to see the band alive like back in the days,
 <br> the band decided to come back together again but with a new line up and recorded an album in 2012 
 which called "<b><a href="https://open.spotify.com/album/56wdbUe1Cl5Dy5hADFcYO7" target="_blank">Playing with Thunder</b></a> "
